cluster-config/toll-calculator.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: apps
  name: ingress-toll-calculator
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: toll-calculator
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: apps
  name: toll-calculator
spec:
  selector:
    app: toll-calculator
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: apps
  name: toll-calculator
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: toll-calculator
  template:
    metadata:
      labels:
        app: toll-calculator
    spec:
      containers:
      - name: toll-calculator
        image: pfredelius/toll-calculator:0.0.12
        ports:
        - containerPort: 8080
---
